global update buissnes logic

--- a/tg-bot/.env
+++ b/tg-bot/.env
@@ -1,5 +1,6 @@
 TOKEN_BOT=7719744882:AAHfLjUORtyWdeyxyyVPETewJyDKLOjT7TM
 DB_CONNECT=postgres://postgres:1234@localhost:5432/postgres?sslmode=disable
+PASS_BOT=1234
 
 GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://postgres:1234@localhost:5432/postgres?sslmode=disable
